--- a/index.html
+++ b/index.html
@@ -10,32 +10,35 @@
 </head>
 <body>
 
-    <form action="">
+    <form action="" id="form">
         <p>Выбери год с
-            <select name="" id="Age">
-                <option value="2021">2023</option>
-                <option value="2021">2022</option>
+            <select name="FromYear" id="Year">
+                <option value="2023">2023</option>
+                <option value="2022">2022</option>
                 <option value="2021">2021</option>
-                <option value="2021">2020</option>
+                <option value="2020">2020</option>
+                <option value="NS">-</option>
             </select>
             по
-            <select name="" id="Age">
-                <option value="2021">2023</option>
-                <option value="2021">2022</option>
+            <select name="ToYear" id="Year">
+                <option value="2023">2023</option>
+                <option value="2022">2022</option>
                 <option value="2021">2021</option>
-                <option value="2021">2020</option>
+                <option value="2020">2020</option>
+                <option value="NS">-</option>
             </select>
         </p>
     
         <p>Выбери Страну - издателя:
-            <select name="" id="Contry">
+            <select name="Contry" id="Contry">
                 <option value="USA">USA</option>
                 <option value="Great Britan">Great Britan</option>
+                <option value="NS">-</option>
             </select>
         </p>
         
         <p>Выбери Жанр:
-            <select name="" id="Categories">
+            <select name="Categories" id="Categories">
                 <option value="comedy">comedy</option>
                 <option value="adventure">adventure</option>
                 <option value="fantasy">fantasy</option>
@@ -48,9 +51,10 @@
                 <option value="fantasy">fantasy</option>
                 <option value="action">action</option>
                 <option value="adventure">adventure</option>
+                <option value="NS">-</option>
             </select>
         </p>
-        <input type="submit" value="Поиск">
+        <input type="submit" value="Поиск" id="search">
     </form>
 </body>
 </html>
